# auth

auth_client/: Cargo.toml
auth_client/src/: lib.rs
auth_common/: Cargo.toml
auth_common/src/: lib.rs
auth_server/: Cargo.toml
auth_server/src/: lib.rs
auth_utils/: Cargo.toml
auth_utils/src/: main.rs
srp/: Cargo.toml  README.md
srp/src/: client.rs  groups.rs  lib.rs  server.rs  utils.rs
